corrected notes for task 'Balls'