@@ -1,10 +1,7 @@
 package edu.epam.fadeev.entity;
 
 import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.EnumSet;
-import java.util.List;
+import java.util.*;
 
 public class Airline {
     private String destination;
@@ -39,7 +36,7 @@ public class Airline {
     }
 
     public  void setWeekdays(Weekday[] weekdays) {
-        this.weekdays = List.of(weekdays);
+        this.weekdays = EnumSet.copyOf(Arrays.asList(weekdays));
     }
 
     public String getDestination() {
@@ -58,15 +55,40 @@ public class Airline {
         return departure;
     }
 
-    public List<Weekday> getWeekdays() {
+    public EnumSet<Weekday> getWeekdays() {
         return weekdays;
     }
 
     public boolean isWeekdayIn(Weekday weekday) {
-        for (int i = 0; i < weekdays.size(); i++) {
-            if(weekday == weekdays.get(i))
-                return true;
-        }
-        return false;
+        return weekdays.contains(weekday);
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Airline airline = (Airline) o;
+        return flightNumber == airline.flightNumber &&
+                Objects.equals(destination, airline.destination) &&
+                planeType == airline.planeType &&
+                Objects.equals(departure, airline.departure) &&
+                Objects.equals(weekdays, airline.weekdays);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(destination, flightNumber, planeType, departure, weekdays);
+    }
+
+    @Override
+    public String toString() {
+        final StringBuilder sb = new StringBuilder("Airline{");
+        sb.append("destination='").append(destination).append('\'');
+        sb.append(", flightNumber=").append(flightNumber);
+        sb.append(", planeType=").append(planeType);
+        sb.append(", departure=").append(departure);
+        sb.append(", weekdays=").append(weekdays);
+        sb.append('}');
+        return sb.toString();
     }
 }
